// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Dropdown should render 1`] = `
.c5 {
  color: #585858;
  font-size: 1.35rem;
  font-weight: 500;
}

.c1 {
  position: relative;
  border-radius: 4px;
  background-color: #F3F3F3;
}

.c2 {
  width: 100%;
  height: 55px;
  background-color: #F3F3F3;
  line-height: 55px;
  padding: 0 4px 0 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  cursor: pointer;
  outline: none;
  -webkit-tap-highlight-color: transparent;
  -webkit-transition: background-color 0.2s ease-out;
  transition: background-color 0.2s ease-out;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  -moz-user-select: none;
}

.c2 i:first-of-type {
  font-size: 1rem;
  margin-left: 5px;
  margin-right: 10px;
  color: #D48C24;
}

.c2:hover {
  background-color: #FDF3E5;
}

.c2 i:last-of-type {
  position: absolute;
  z-index: 1;
  top: 14px;
  right: 7px;
  font-size: 1.7rem;
}

.c3 {
  visibility: hidden;
  opacity: 0;
  overflow: auto;
  -webkit-transition: opacity 0.2s ease 0s;
  transition: opacity 0.2s ease 0s;
  position: absolute;
  box-sizing: border-box;
  background-color: #F3F3F3;
  z-index: 2;
  top: 0;
  left: 0;
  padding: 20px 10px 10px;
  width: 100%;
  height: 100%;
  max-height: 100vh;
  border: 1px solid #F3F3F3;
  border-radius: 4px;
  border-top: 0;
  border-bottom: 0;
  outline: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 10px;
  margin: 10px 0 15px;
}

.c6 {
  cursor: pointer;
  line-height: 0;
  background-color: transparent;
  outline: none;
  -webkit-tap-highlight-color: transparent;
  margin-top: 4px;
}

.c6 i {
  font-size: 1.1rem;
  font-weight: 600;
}

.c6 i {
  color: #585858;
  font-size: 1.5rem;
}

.c7 {
  width: 100%;
  height: 55px;
  border-bottom: 1px solid #E5EAED;
  list-style: none;
  display: block;
  overflow: hidden;
  color: #2f3235;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  padding: 9px 11px;
  cursor: pointer;
  outline: none;
  -webkit-tap-highlight-color: transparent;
}

.c7:hover {
  background-color: #FDF3E5;
}

.c7:focus {
  background-color: #FDF3E5;
}

.c8 {
  color: #2f3235;
  font-size: 1rem;
  font-weight: 400;
}

@media only screen and (min-width:992px) {
  .c5 {
    font-size: 1.45rem;
  }
}

@media only screen and (min-width:768px) {
  .c0 {
    position: relative;
  }
}

@media only screen and (min-width:768px) {
  .c3 {
    max-height: 440px;
    height: auto;
    padding: 0;
    box-shadow: 0 2px 2px rgba(0,0,0,0.35);
    -webkit-transition: opacity 0.2s ease 0s,-webkit-transform 0.2s ease 0s;
    -webkit-transition: opacity 0.2s ease 0s,transform 0.2s ease 0s;
    transition: opacity 0.2s ease 0s,transform 0.2s ease 0s;
    -webkit-transform: translateY(20px);
    -ms-transform: translateY(20px);
    transform: translateY(20px);
  }
}

@media only screen and (min-width:768px) {
  .c4 {
    display: none;
  }
}

@media only screen and (min-width:992px) {
  .c8 {
    font-size: 0.9rem;
  }
}

<div
  class="c0"
  data-testid="dropdown"
>
  <div
    class="c1"
  >
    <button
      class="c2"
      type="button"
    >
      <i
        class="material-icons"
        data-testid="label-icon"
      >
        label
      </i>
      <span>
        Select any option
      </span>
      <i
        class="material-icons"
      >
        arrow_drop_down
      </i>
    </button>
  </div>
  <div
    class="c3"
    data-testid="dropdown-list"
    role="listbox"
    tabindex="0"
  >
    <div
      class="c4"
    >
      <h4
        class="c5"
      >
        Select any option
      </h4>
      <button
        class="c6"
        type="button"
      >
        <i
          class="material-icons"
        >
          close
        </i>
      </button>
    </div>
    <div
      class="c7"
      role="option"
    >
      <p
        class="c8"
      >
        First option
      </p>
    </div>
    <div
      class="c7"
      role="option"
    >
      <p
        class="c8"
      >
        Second option
      </p>
    </div>
    <div
      class="c7"
      role="option"
    >
      <p
        class="c8"
      >
        Third option
      </p>
    </div>
    <div
      class="c7"
      role="option"
    >
      <p
        class="c8"
      >
        Fourth option
      </p>
    </div>
    <div
      class="c7"
      role="option"
    >
      <p
        class="c8"
      >
        Fifth option
      </p>
    </div>
  </div>
</div>
`;

exports[`Component: Dropdown should render with clearable option 1`] = `
.c6 {
  color: #585858;
  font-size: 1.35rem;
  font-weight: 500;
}

.c1 {
  position: relative;
  border-radius: 4px;
  background-color: #F3F3F3;
}

.c2 {
  width: 100%;
  height: 55px;
  background-color: #F3F3F3;
  line-height: 55px;
  padding: 0 4px 0 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  cursor: pointer;
  outline: none;
  -webkit-tap-highlight-color: transparent;
  -webkit-transition: background-color 0.2s ease-out;
  transition: background-color 0.2s ease-out;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  -moz-user-select: none;
  background-color: #FDF3E5;
}

.c2 i:first-of-type {
  font-size: 1rem;
  margin-left: 5px;
  margin-right: 10px;
  color: #D48C24;
}

.c2:hover {
  background-color: #FDF3E5;
}

.c4 {
  visibility: hidden;
  opacity: 0;
  overflow: auto;
  -webkit-transition: opacity 0.2s ease 0s;
  transition: opacity 0.2s ease 0s;
  position: absolute;
  box-sizing: border-box;
  background-color: #F3F3F3;
  z-index: 2;
  top: 0;
  left: 0;
  padding: 20px 10px 10px;
  width: 100%;
  height: 100%;
  max-height: 100vh;
  border: 1px solid #F3F3F3;
  border-radius: 4px;
  border-top: 0;
  border-bottom: 0;
  outline: none;
}

.c3 {
  cursor: pointer;
  line-height: 0;
  background-color: transparent;
  outline: none;
  -webkit-tap-highlight-color: transparent;
  position: absolute;
  z-index: 1;
  top: 19px;
  right: 7px;
  -webkit-transition: opacity 0.2s ease-out;
  transition: opacity 0.2s ease-out;
}

.c3 i {
  font-size: 1.1rem;
  font-weight: 600;
}

.c3:hover {
  opacity: 0.5;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 10px;
  margin: 10px 0 15px;
}

.c7 {
  cursor: pointer;
  line-height: 0;
  background-color: transparent;
  outline: none;
  -webkit-tap-highlight-color: transparent;
  margin-top: 4px;
}

.c7 i {
  font-size: 1.1rem;
  font-weight: 600;
}

.c7 i {
  color: #585858;
  font-size: 1.5rem;
}

.c8 {
  width: 100%;
  height: 55px;
  border-bottom: 1px solid #E5EAED;
  list-style: none;
  display: block;
  overflow: hidden;
  color: #2f3235;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  padding: 9px 11px;
  cursor: pointer;
  outline: none;
  -webkit-tap-highlight-color: transparent;
}

.c8:hover {
  background-color: #FDF3E5;
}

.c8:focus {
  background-color: #FDF3E5;
}

.c10 {
  color: #2f3235;
  font-size: 1rem;
  font-weight: 400;
}

.c9 {
  color: #2f3235;
  font-size: 1rem;
  font-weight: 600;
}

@media only screen and (min-width:992px) {
  .c6 {
    font-size: 1.45rem;
  }
}

@media only screen and (min-width:768px) {
  .c0 {
    position: relative;
  }
}

@media only screen and (min-width:768px) {
  .c4 {
    max-height: 440px;
    height: auto;
    padding: 0;
    box-shadow: 0 2px 2px rgba(0,0,0,0.35);
    -webkit-transition: opacity 0.2s ease 0s,-webkit-transform 0.2s ease 0s;
    -webkit-transition: opacity 0.2s ease 0s,transform 0.2s ease 0s;
    transition: opacity 0.2s ease 0s,transform 0.2s ease 0s;
    -webkit-transform: translateY(20px);
    -ms-transform: translateY(20px);
    transform: translateY(20px);
  }
}

@media only screen and (min-width:768px) {

}

@media only screen and (min-width:768px) {
  .c5 {
    display: none;
  }
}

@media only screen and (min-width:992px) {
  .c10 {
    font-size: 0.9rem;
  }
}

@media only screen and (min-width:992px) {
  .c9 {
    font-size: 0.9rem;
  }
}

<div
  class="c0"
  data-testid="dropdown"
>
  <div
    class="c1"
  >
    <button
      class="c2"
      type="button"
    >
      <i
        class="material-icons"
        data-testid="label-icon"
      >
        label
      </i>
      <span>
        First option
      </span>
    </button>
    <button
      class="c3"
      type="button"
    >
      <i
        class="material-icons"
      >
        close
      </i>
    </button>
  </div>
  <div
    class="c4"
    data-testid="dropdown-list"
    role="listbox"
    tabindex="0"
  >
    <div
      class="c5"
    >
      <h4
        class="c6"
      >
        Select any option
      </h4>
      <button
        class="c7"
        type="button"
      >
        <i
          class="material-icons"
        >
          close
        </i>
      </button>
    </div>
    <div
      class="c8"
      role="option"
    >
      <p
        class="c9"
      >
        First option
      </p>
    </div>
    <div
      class="c8"
      role="option"
    >
      <p
        class="c10"
      >
        Second option
      </p>
    </div>
    <div
      class="c8"
      role="option"
    >
      <p
        class="c10"
      >
        Third option
      </p>
    </div>
    <div
      class="c8"
      role="option"
    >
      <p
        class="c10"
      >
        Fourth option
      </p>
    </div>
    <div
      class="c8"
      role="option"
    >
      <p
        class="c10"
      >
        Fifth option
      </p>
    </div>
  </div>
</div>
`;
